--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,33 @@ body {
   margin: 0;
   padding: 0;
 }
-
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#home {
+  background-color: #4c6085;
+  width: 70%;
+  padding: 30px;
+  border-radius: 8px;
+  margin: 50px auto;
+  display: flex;
+  justify-content: space-around;
+}
+#muscle-groups {
+  width: 50%;
+}
+#search-muscle-group {
+  width: 500px;
+}
+input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: 1px solid #32322c;
+}
 .msguser {
   background-color: crimson;
   color: snow;
@@ -12,4 +38,33 @@ body {
   padding: 10px 20px;
   border-radius: 8px;
   margin: 0 auto;
+}
+.pencilsnow a,
+li,
+p,
+.btn-search {
+  color: snow;
+  font-size: 1.2rem;
+}
+a {
+  text-decoration: none;
+}
+#navbar-workout {
+  background-color: #36f1cd;
+}
+
+#btn-instructions {
+  border: 3px solid #32322c;
+}
+.form-workout {
+  margin-bottom: 30px;
+}
+.btn-search {
+  background-color: #39a0ed;
+  padding: 10px 20px;
+  border-radius: 12px;
+}
+.btn-search:hover {
+  background-color: azure;
+  color: #39a0ed;
 }
