--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -7,7 +7,8 @@ content %}
     <div class="accordion-item">
       <h2 class="accordion-header" id="{{heading}}">
         <button
-          class="accordion-button bg-success text-white shadow-none"
+          class="accordion-button text-white shadow-none"
+          style="background-color: #4c6085"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#{{collapse}}"
