show_all_exercises ...api/workout/exercises endpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %} Exercise {% endblock %} {% block
 content %}
-<div class="container pencilsnow" id="home">
+<div class="container" id="home">
   <div id="muscle-groups">
     <p>Search among the following exercise groups:</p>
     <ul>
