--- a/templates/videos.html
+++ b/templates/videos.html
@@ -13,8 +13,9 @@ content %}
       {% endfor %}
     </ul>
   </section>-->
-  <section>
+  <section class="videos">
     {% for video in videos %}
+    <div class="youtube-frame">
     <iframe
       width="320"
       height="180"
@@ -24,6 +25,8 @@ content %}
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+    <a href="/videos/add/{{name}}/{{video.videoid}}" id="save-video" class="btn btn-success text-light d-block">Save</a>
+    </div>
     {% endfor %}
   </section>
 </main>
