flash msg if video already saved

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,9 @@
         </div>
       </div>
     </nav>
+    {% for category, msg in get_flashed_messages(with_categories=true) %}
+      <h2 class="{{category}}">{{msg}}</h2>
+      {% endfor %}
     {% block content %} {% endblock %}
   </body>
 </html>
