--- a/templates/videos.html
+++ b/templates/videos.html
@@ -15,17 +15,18 @@ content %}
   </section>-->
   <section class="videos">
     {% for video in videos %}
-    <div class="youtube-frame">
-    <iframe
-      width="320"
-      height="180"
-      src="https://www.youtube.com/embed/{{video.videoid}}"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
-    <a href="/videos/add/{{name}}/{{video.videoid}}" id="save-video" class="btn btn-success text-light d-block">Save</a>
+    <div class="youtube-frame video-wrapper">
+      <iframe
+        width="320"
+        height="180"
+        src="https://www.youtube.com/embed/{{video.videoid}}"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <a href="/videos/add/{{name}}/{{video.videoid}}" class="add-video">+</a>
+      <!--<a href="/videos/add/{{name}}/{{video.videoid}}" id="save-video" class="btn btn-success text-light d-block">Save</a>-->
     </div>
     {% endfor %}
   </section>
