--- a/templates/videos.html
+++ b/templates/videos.html
@@ -15,7 +15,7 @@ content %}
   </section>-->
   <section class="videos">
     {% for video in videos %}
-    <div class="youtube-frame video-wrapper">
+    <div class="video-wrapper m-5">
       <iframe
         width="320"
         height="180"
