--- a/templates/index.html
+++ b/templates/index.html
@@ -40,4 +40,8 @@ content %}
     </section>
   </div>
 </div>
-{% endblock %}
+{%if session['user_id'] %}
+<div>
+  <a href="/logout">Logout</a>
+</div>
+{% endif %} {% endblock %}
