--- a/static/styles.css
+++ b/static/styles.css
@@ -9,8 +9,7 @@ ul {
   margin: 0;
   padding: 0;
 }
-#home,
-#profile {
+.container {
   background-color: #4c6085;
   width: 70%;
   padding: 30px;
@@ -19,7 +18,8 @@ ul {
   display: flex;
   justify-content: space-around;
 }
-#profile {
+#profile,
+#login {
   margin-top: 120px;
 }
 #muscle-groups {
@@ -49,10 +49,10 @@ input {
   /*margin: 5px auto;*/
   text-align: center;
 }
-.success {
+/*.success {
   background-color: green;
   left: 75%;
-}
+}*/
 .pencilsnow a,
 li,
 p,
@@ -73,12 +73,16 @@ a {
 .form-workout {
   margin-bottom: 30px;
 }
-.btn-search {
+.btn-search,
+.btn-login,
+.btn-register {
   background-color: #39a0ed;
   padding: 10px 20px;
   border-radius: 12px;
 }
-.btn-search:hover {
+.btn-search:hover,
+.btn-login:hover,
+.btn-register:hover {
   background-color: azure;
   color: #39a0ed;
 }
