--- a/templates/register.html
+++ b/templates/register.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %} {% block title %} Register {% endblock %} {% block
 content %}
+<div class="container" id="register">
+  <h1 class="display-1">Sign Up</h1>
 
-<h1 class="display-1">Sign Up</h1>
-<p class="lead">Register below</p>
-
-<form method="POST">
-  {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
-  'hidden' %}
-  <h5>
-    {{ field.label }} {{ field(class_="form-control") }} {% for error in
-    field.errors %}
-    <span class="form-text text-danger">{{ error }}</span>
+  <form method="POST">
+    {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
+    'hidden' %}
+    <h5>
+      {{ field.label }} {{ field(class_="form-control") }} {% for error in
+      field.errors %}
+      <span class="form-text text-danger">{{ error }}</span>
+      {% endfor %}
+    </h5>
     {% endfor %}
-  </h5>
-  {% endfor %}
 
-  <button class="btn btn-success" type="submit">Register</button>
-</form>
+    <button class="btn btn-success" type="submit">Register</button>
+  </form>
+</div>
 {% endblock %}
