profile page updated, delete user route added

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,9 @@
             </li>
             {% if session['user_id'] %}
             <li class="nav-item">
-              <a class="nav-link" href="/profile">Profile</a>
+              <a class="nav-link" href="/profile/{{session['user_id']}}"
+                >Profile</a
+              >
             </li>
             <li class="nav-item">
               <!--<form action="/logout" method="POST">
