--- a/static/styles.css
+++ b/static/styles.css
@@ -9,6 +9,13 @@ ul {
   margin: 0;
   padding: 0;
 }
+.two-containers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #4c6085;
+  height: 100vh;
+}
 .my-container {
   background-color: #4c6085;
   width: 70%;
@@ -17,6 +24,7 @@ ul {
   margin: 50px auto;
   display: flex;
   justify-content: space-around;
+  justify-content: space-evenly;
 }
 #profile,
 #login {
@@ -61,7 +69,9 @@ li,
 p,
 .btn-search,
 .btn-login,
-.btn-register {
+.btn-register,
+.btn-edit,
+.btn-delete {
   color: snow;
   font-size: 1.2rem;
 }
@@ -80,14 +90,18 @@ a {
 }
 .btn-search,
 .btn-login,
-.btn-register {
+.btn-register,
+.btn-edit,
+.btn-delete {
   background-color: #39a0ed;
   padding: 10px 20px;
   border-radius: 12px;
 }
 .btn-search:hover,
 .btn-login:hover,
-.btn-register:hover {
+.btn-register:hover,
+.btn-edit:hover,
+.btn-delete:hover {
   background-color: azure;
   color: #39a0ed;
 }
@@ -144,4 +158,16 @@ a {
 }
 .auth a:hover {
   color: snow;
+}
+#login h1,
+#register h1,
+#profile h1 {
+  color: azure;
+  margin-top: 3rem;
+}
+#register h1 {
+  margin-top: 8rem;
+}
+.user {
+  color: #36f1cd;
 }
