--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,9 +1,26 @@
 {% extends 'base.html' %} {% block title %} Exercise {% endblock %} {% block
 content %}
-<div class="container" id="profile">
-  <p class="auth">Do you have an account? <a href="/login">Login here</a></p>
-  <p class="auth">
-    Don't have an account? <a href="/register">Register here</a>
-  </p>
+<div class="two-containers">
+  <div class="my-container" id="profile">
+    <div>
+      <h1>Welcome {{user.username}}!</h1>
+    </div>
+    <div>
+      <h2 class="user">Your profile info:</h2>
+      <h4 class="user">First name: {{user.first_name}}</h4>
+      <h4 class="user">Last name: {{user.last_name}}</h4>
+      <h4 class="user">Email: {{user.email}}</h4>
+    </div>
+  </div>
+  <div class="my-container">
+    <div>
+      <a href="/edit" class="btn btn-edit">Edit Profile</a>
+    </div>
+    <div>
+      <a href="/users/delete/{{user.id}}" class="btn btn-delete"
+        >Delete Profile</a
+      >
+    </div>
+  </div>
 </div>
 {% endblock %}
