--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %} {% block title %} Register {% endblock %} {% block
 content %}
 <div class="my-container" id="register">
-  <h1 class="pencilsnow">Sign Up</h1>
+  <h1 class="display-1">Sign Up</h1>
 
   <form method="POST">
     {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
     'hidden' %}
-    <h5>
+    <p>
       {{ field.label }} {{ field(class_="form-control") }} {% for error in
       field.errors %}
       <span class="form-text text-danger">{{ error }}</span>
       {% endfor %}
-    </h5>
+    </p>
     {% endfor %}
 
     <button class="btn btn-register" type="submit">Register</button>
