playlists starter page

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/my_videos">My Videos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/playlists">Playlists</a>
+            </li>
             {% if session['user_id'] %}
             <li class="nav-item">
               <a class="nav-link" href="/profile/{{session['user_id']}}"
