--- a/templates/base.html
+++ b/templates/base.html
@@ -115,5 +115,9 @@
     {% for category, msg in get_flashed_messages(with_categories=true) %}
     <h2 class="{{category}}">{{msg}}</h2>
     {% endfor %} {% block content %} {% endblock %}
+    <!--<footer class="text-center py-3 mt-3">
+      <p>&copy; 2024 Workout App</p>
+      <a href="/contact" class="text-light">Contact Us</a>
+    </footer>-->
   </body>
 </html>
