--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
             </li>
             {% if session['user_id'] %}
             <li class="nav-item">
-              <a class="nav-link" href="/profile/{{session['user_id']}}"
+              <a class="nav-link" href="/profile/{{session['username']}}"
                 >Profile</a
               >
             </li>
