users can add their own videos

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
               >
             </li>-->
             <li class="nav-item">
-              <a class="nav-link" href="/my_videos">My Videos</a>
+              <a class="nav-link" href="/auth/my_videos">My Videos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/playlists">Playlists</a>
