--- a/templates/myvideos5.html
+++ b/templates/myvideos5.html
@@ -27,7 +27,7 @@ content %}
             id="video-carousel"
           >
             {% for exercise in exercises %} {% for video in exercise.videos %}
-
+            {%if video.id in ids %}
             <div class="me-2 video-wrapper">
               <iframe
                 width="320"
@@ -40,7 +40,7 @@ content %}
               ></iframe>
               <a href="/videos/delete/{{video.id}}" class="delete-video">X</a>
             </div>
-            {% endfor %} {% endfor %}
+            {% endif %} {% endfor %} {% endfor %}
           </div>
         </div>
       </div>
