--- a/templates/myvideos5.html
+++ b/templates/myvideos5.html
@@ -38,7 +38,9 @@ content %}
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
-              <a href="/videos/delete/{{video.id}}" class="delete-video">X</a>
+              <a href="/auth/videos/delete/{{video.id}}" class="delete-video"
+                >X</a
+              >
             </div>
             {% endif %} {% endfor %} {% endfor %}
           </div>
