playlist form added

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="/auth/my_videos">My Videos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/playlists">Playlists</a>
+              <a class="nav-link" href="/auth/playlists">Playlists</a>
             </li>
             {% if session['user_id'] %}
             <li class="nav-item">
