--- a/static/styles.css
+++ b/static/styles.css
@@ -146,10 +146,24 @@ footer {
   border-radius: 50%;
   cursor: pointer;
 }
+.add-playlist {
+  display: none;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-color: green;
+  color: gold;
+  padding: 2px 6px;
+  font-size: 14px;
+  text-decoration: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
 /* Show '+' or 'X' when the iframe is hovered */
 .video-wrapper:hover .delete-video,
-.video-wrapper:hover .add-video {
+.video-wrapper:hover .add-video,
+.video-wrapper:hover .add-playlist {
   display: block;
 }
 
