--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,11 @@ content %}
   </div>
   <div id="search-muscle-group">
     <form class="form-workout">
-      <input type="text" name="muscle" placeholder="muscle group" />
+      <input
+        type="text"
+        name="muscle"
+        placeholder="muscle group, type at least 4 letters"
+      />
       <button type="submit" class="btn-search">Search</button>
     </form>
     <section class="pencilsnow">
