--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -14,7 +14,9 @@ content %}
   ></button>
 </div>
 <div class="container-fluid mt-4">
-  {% for playlist in playlists %}
+  {%if playlists | length == 0 %}
+  <h3 class="text-center">You have no playlists yet.</h3>
+  {% endif %} {% for playlist in playlists %}
   <div>
     <h3>{{ playlist.name }}</h3>
     <div class="mt-4">
