--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %} Exercise {% endblock %} {% block
 content %}
-<div class="two-containers">
-  <div class="my-container" id="profile">
+<div class="profile-two-containers">
+  <div class="profile-container-info" id="profile">
     <div>
       <h1>Welcome {{user.username}}!</h1>
     </div>
@@ -12,7 +12,7 @@ content %}
       <h4 class="user">Email: {{user.email}}</h4>
     </div>
   </div>
-  <div class="my-container">
+  <div class="profile-container-edit-delete">
     <div>
       <a href="/edit" class="btn btn-edit">Edit Profile</a>
     </div>
