sign up only with unique username and unique email

--- a/templates/form_fields.html
+++ b/templates/form_fields.html
@@ -11,7 +11,7 @@
 
   <span>
     {% if field.errors %} {% for error in field.errors %}
-    <b class="text-danger">{{ error }}</b>
+    <b class="text-info">{{ error }}</b>
     {% endfor %} {% endif %}
   </span>
 </div>
