--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@ content %}
     <p>
       {{ field.label }} {{ field(class_="form-control") }} {% for error in
       field.errors %}
-      <span class="form-text text-danger">{{ error }}</span>
+      <span class="form-text text-info">{{ error }}</span>
       {% endfor %}
     </p>
     {% endfor %}
