--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@ content %}
   </div>
   <div class="profile-container-edit-delete">
     <div>
-      <a href="/edit" class="btn btn-edit">Edit Profile</a>
+      <a href="/users/update/{{user.id}}" class="btn btn-edit">Edit Profile</a>
     </div>
     <div>
       <a href="/users/delete/{{user.id}}" class="btn btn-delete"
