--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='workout_favicon/favicon.ico') }}"
+      type="image/x-icon"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -34,7 +39,12 @@
   <body>
     <nav id="navbar-workout" class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Home</a>
+        <a class="navbar-brand" href="/"
+          ><img
+            style="width: 50px; height: 50px; border-radius: 15px"
+            src="{{ url_for('static', filename='WorkoutFavicon.webp') }}"
+            alt="workout"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
