--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Exercise {% endblock %} {% block
+{% extends 'base.html' %} {% block title %} Workout {% endblock %} {% block
 content %}
 <div class="my-container" id="home">
   <div id="muscle-groups">
