--- a/templates/add_to_playlist.html
+++ b/templates/add_to_playlist.html
@@ -15,8 +15,8 @@ block content %}
             </p>
             {% endfor %}-->
         {% include "form_fields.html" %}
-        <button class="btn btn-info btn-lg">Submit</button>
-        <a class="btn btn-warning btn-lg" href="/auth/my_videos">Go Back</a>
+        <button class="btn btn-playlist btn-lg">Submit</button>
+        <a class="btn btn-back btn-lg" href="/auth/my_videos">Go Back</a>
       </form>
     </div>
   </div>
