--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@ content %}
         name="muscle"
         placeholder="muscle group, type at least 4 letters"
       />
-      <button type="submit" class="btn-search">Search</button>
+      <button type="submit" class="btn btn-search">Search</button>
     </form>
     <section class="pencilsnow">
       {% for exercise in exercises %}
