--- a/templates/myvideos5.html
+++ b/templates/myvideos5.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %} Exercise {% endblock %} {% block
 content %}
 <div
-  class="alert alert-info alert-dismissible fade show w-50"
+  class="alert alert-info alert-dismissible fade show w-100 text-center"
   id="auto-dismiss-alert"
   role="alert"
 >
